assets/scss/wallet.sass
#wallet
  min-height: 435px

.wallet
  .active-orders
    table
      tbody
        td
          padding-left: calc(0.75rem + 0.65em)

  .trading-history
    table
      tbody
        td
          padding-left: calc(0.75rem + 0.65em)

  .deposit-withdraw-table
    .text-truncate
      max-width: 200px
      text-overflow: ellipsis
      overflow: hidden

    table
      tbody
        td
          padding-left: calc(0.75rem + 0.65em)

  .table-restricted
    max-height: 500px

  .wallet-table
    th
      &:last-child
        text-align: center

  .icon-deposit
    background-image: url('../img/deposit-sprite.png')
    @extend .icon
    &:hover
      background-position: -18px 0

  .icon-withdraw
    background-image: url('../img/withdraw-sprite.png')
    @extend .icon
    &:hover
      background-position: -18px 0

  .icon-cancel
    background-image: url('../img/cancel-sprite.png')
    @extend .icon
    width: 17px !important
    &:hover
      background-position: -17px 0

  .cancel-forbidden
    background-position: -17px 0

.field-table
  width: 25%

.first-field
  width: 50%

